zeit.content.author changes
===========================

0.1.2 (unreleased)
------------------

- Fix rendering of a folder listing with authors in it (#8763).


0.1.1 (2010-08-09)
------------------

- Fix tests after product config changes in zeit.cms (#7549).


0.1.0 (2010-06-09)
------------------

* first release